Spacing and font fix 'where will we be in the future?

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,11 @@ ul a {
   margin: auto;
 }
 
+.list-group {
+  font-family: "Catamaran", sans-serif;
+  width: 80%;
+}
+
 /*Contact*/
 
 .contact {
